# src/routers/holderRoutes.ts
@@ -1,0 +1,16 @@
+import { Router } from "express";
+import { HolderController } from "../controllers/HolderController.js";
+
+export class HolderRoutes {
+    public router: Router;
+    public holderController = new HolderController();
+    constructor () {
+        this.router = Router();
+        this.routers();
+    }
+
+    routers(): void {
+        this.router.post("", this.holderController.uploadHolder);
+        this.router.get("", this.holderController.getHolder);
+    }
+}
